--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,10 +1,15 @@
+:root {
+    --color-gray_darken: #1c1c1e;
+    --color-gray_light: #f3f3f3;
+}
+
 html {
     font-size: 62.5%
 }
 
 body {
     margin: 0;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
 }
 
 @import 'typography';
