--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,7 +1,8 @@
 button,
 .btn {
-    background-color: cadetblue;
-    padding: .5rem 1rem;
+    background-color: var(--color-violet);
+    width: 15rem;
+    padding: 1rem 2rem;
     border: none;
     color: white;
     border-radius: .5em;
