--- a/src/styleguide/Styleguide.scss
+++ b/src/styleguide/Styleguide.scss
@@ -4,9 +4,10 @@
 
 .section {
     background-color: #f3f3f3;
-    padding: 1rem;
+    padding: 1rem 2rem;
     margin: 1rem 0;
-    display: inline-block;
+    width: 50rem;
+    border-radius: .5em;
 }
 
 .stynav {
