Add typography and variables scss

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -4,29 +4,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-family: 'Alice';
+    font-family: $font_display;
     font-size: 3.2rem;
     color: var(--color-pistacho);
 }
 
 h2 {
-    font-family: 'CutiveMono';
+    font-family: $font_mono;
     font-size: 2.4rem;
     color: var(--color-violet);
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 2.4rem;
 }
 
 h4 {
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 h5 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 h6 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
 }
