--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,32 +1,48 @@
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
     color: var(--color-gray_dark);
     margin: 1rem 0;
 }
 
-h1 {
+h1,
+.h1 {
     font-family: $font_display;
-    font-size: 3.2rem;
+    font-size: fs(x-big);
     color: var(--color-pistacho);
 }
 
-h2 {
+h2,
+.h2 {
     font-family: $font_mono;
-    font-size: 2.4rem;
+    font-size: fs(big);
     color: var(--color-violet);
 }
 
-h3 {
-    font-size: 2.4rem;
+h3,
+.h3 {
+    font-size: fs(big);
 }
 
-h4 {
-    font-size: 2rem;
+h4,
+.h4 {
+    font-size: fs(x-large);
 }
 
-h5 {
-    font-size: 1.8rem;
+h5,
+.h5 {
+    font-size: fs(large);
 }
 
-h6 {
-    font-size: 1.6rem;
+h6,
+.h6 {
+    font-size: fs(medium);
+}
+
+p {
+    margin: 1rem 0;
+}
+
+small {
+    font-size: fs(small);
+    margin: .5rem 0;
 }
