--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,12 +1,20 @@
+@import '../../scss/variables';
+@import '../../scss/functions';
+
 button,
 .btn {
     background-color: var(--color-violet);
-    width: 15rem;
+    font-family: $font_main;
+    font-size: fs(medium);
+    // min-width: 15rem;
+    display: inline-block;
     padding: 1rem 2rem;
     border: none;
     color: white;
     border-radius: .5em;
     cursor: pointer;
+    text-decoration: none;
+    text-align: center;
 }
 
 .btn--secondary {
@@ -16,12 +24,13 @@ button,
 }
 
 .btn--cta {
-    font-size: fs(x-large);
+    font-size: 12px;
     padding: 2rem 3rem;
 }
 
 /*Para borrar después*/
 
-.btn + .btn {
-    margin: 0 1rem;
+.btn + .btn,
+button + button {
+    margin: 2rem 1rem;
 }
