--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,11 +1,27 @@
-$gray_darken: 240 3% 11%;
-$gray_dark: 184 9% 64%;
-$gray: 187 11% 84%;
-$gray_light: 0 0% 95%;
+$gray_darken: 238 57% 12%;
+$gray_dark: 208 17% 48%;
+$gray: 208 16% 69%;
+$gray_light: 208 16% 89%;
+$gray_lighter: 0 0% 96%;
 
-$pistacho: 62 67% 55%;
-$violet: 314 20% 52%;
-$purple: 314 48% 20%;
+$yellow_darken: 37 98% 40%;
+$yellow_dark: 37 98% 48%;
+$yellow: 37 98% 60%;
+$yellow_light: 37 98% 74%;
+$yellow_lighter: 37 98% 83%;
+
+$burdeos_darken: 330 67% 14%;
+$burdeos_dark: 330 67% 20%;
+$burdeos: 330 67% 31%;
+$burdeos_light: 330 67% 45%;
+$burdeos_lighter: 330 67% 68%;
+
+$cadet_blue_darken: 238 58% 21%;
+$cadet_blue_dark: 238 58% 31%;
+$cadet_blue: 238 58% 46%;
+$cadet_blue_light: 238 58% 63%;
+$cadet_blue_lighter: 238 58% 78%;
+
 
 $box-shadow: 0 0 1rem 0 hsl($gray);
 
