--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,26 +1,3 @@
-$color-list: (
-    'gray_darken': $gray_darken,
-    'gray_dark': $gray_dark,
-    'gray': $gray,
-    'gray_light': $gray_light,
-    'gray_lighter': $gray_lighter,
-    'yellow_darken': $yellow_darken,
-    'yellow_dark': $yellow_dark,
-    'yellow': $yellow,
-    'yellow_light': $yellow_light,
-    'yellow_lighter': $yellow_lighter,
-    'burdeos_darken': $burdeos_darken,
-    'burdeos_dark': $burdeos_dark,
-    'burdeos': $burdeos,
-    'burdeos_light': $burdeos_light,
-    'burdeos_lighter': $burdeos_lighter,
-    'cadet_blue_darken': $cadet_blue_darken,
-    'cadet_blue_dark': $cadet_blue_dark,
-    'cadet_blue': $cadet_blue,
-    'cadet_blue_light': $cadet_blue_light,
-    'cadet_blue_lighter': $cadet_blue_lighter
-);
-
 @each $key, $value in $color-list {
     .color-#{$key} {
         color: hsl($value);
@@ -31,14 +8,8 @@ $color-list: (
     }
 }
 
-.font-family-mono {
-    font-family: $font_mono;
-}
-
-.font-family-main {
-    font-family: $font_main;
-}
-
-.font-family-display {
-    font-family: $font_display;
+@each $key, $value in $font-list {
+    .#{$key} {
+        font-family: $value;
+    }
 }
