Add header and footer components. Add structure

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -15,7 +15,7 @@ h2,
 .h2 {
     font-family: $font_mono;
     font-size: fs(big);
-    color: var(--color-yellow);
+    color: var(--color-yellow_dark);
 }
 
 h3,
