--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -37,7 +37,8 @@ $font_sizes: (
     "x-large": 2,
     "big": 2.4,
     "x-big": 3,
-    "huge": 5.5
+    "huge": 5,
+    "x-huge": 7
 );
 
 $color-list: (
