Fix size footer icons

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -12,6 +12,11 @@ footer, .footer {
         fill: var(--color-gray_lighter);
         display: flex;
         gap: 1rem;
+
+        & svg {
+            width: 3.2rem;
+            height: 3.2rem;
+        }
     }
 
     &__copy {
