--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,7 +7,7 @@ h1, h2, h3, h4, h5, h6,
 h1,
 .h1 {
     font-family: $font_display;
-    font-size: fs(x-big);
+    font-size: fs(huge);
     color: var(--color-burdeos);
 }
 
