--- a/src/styleguide/Styleguide.scss
+++ b/src/styleguide/Styleguide.scss
@@ -15,13 +15,14 @@
     background-color: var(--color-gray_lighter);
     padding: 1rem 2rem;
     margin: 1rem 0;
-    width: 100%;
+    width: calc(100% - 4rem);
     border-radius: .5em;
 
     &__item {
         display: flex;
         gap: 1rem;
         margin: .5rem 0;
+        flex-wrap: wrap;
     }
 }
 
@@ -31,6 +32,7 @@ code {
     padding: 0 .5rem;
     border: .1em solid var(--color-yellow_light);
     border-radius: .2em;
+    word-wrap: break-word;
 }
 
 .stynav {
