--- a/src/components/firstsight/Firstsight.scss
+++ b/src/components/firstsight/Firstsight.scss
@@ -1,33 +1,34 @@
 @import '../../scss/variables';
 @import '../../scss/functions';
 
-.header {
+.firstsight {
+    background-color: var(--color-burdeos);
+    border-radius: .5em;
+    padding: 5rem 3rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5rem 2rem;
-    background-color: var(--color-gray_lighter);
     text-align: center;
-
+    width: 100%;
+    gap: 3rem;
+    
     &__tittle {
-        font-size: fs(huge);
-        margin: 0;
+        color: var(--color-gray_lighter);
+        font-size: fs(x-big);
     }
 
     &__subtittle {
+        color: var(--color-yellow_lighter);
         font-size: fs(x-large);
-        margin: 0;
-        color: var(--color-cadet_blue_light);
     }
 }
 
 @media all and (min-width: 600px) {
-    .header {
-        padding: 8rem 2rem;
+    .firstsight {
+        padding: 12rem 4rem;
+        gap: 6rem;
 
         &__tittle {
-            font-size: fs(x-huge);
+            font-size: fs(huge);
         }
 
         &__subtittle {
