--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -44,10 +44,39 @@ body {
 }
 
 main {
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
 }
 
 .section {
     display: flex;
+    flex-direction: column;
+    padding: 2rem;
     gap: 1rem;
+    width: calc(100% - 4rem);
+    max-width: 60rem;
+
+    &--full {
+        width: auto;
+        max-width: none;
+        flex-direction: row;
+    }
+
+    &--right {
+        align-items: end;
+    }
+}
+
+.displayGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+@media all and (min-width: 600px) {
+    .displayGrid {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
