--- a/src/components/presentation/Presentation.scss
+++ b/src/components/presentation/Presentation.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 90rem;
 
     &__contents {
         display: flex;
@@ -44,5 +45,6 @@
 @media all and (min-width: 600px) {
     .presentation {
         flex-direction: row;
+        padding: 0 calc((100% - 90rem) / 2);
     }
 }
