--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -59,7 +59,6 @@ main {
     max-width: 60rem;
 
     &--full {
-        width: auto;
         max-width: none;
         flex-direction: row;
     }
@@ -73,6 +72,7 @@ main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
+    text-align: center;
 }
 
 @media all and (min-width: 600px) {
