--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -6,6 +6,11 @@
     &__item {
         display: flex;
         gap: .5rem;
+        margin-bottom: 1.5rem;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
 
         &::before {
             content: url(../components/icons/IconFeature.svg);
