Add gallery component, refactor some classes & create animations for about and design section. Also add a btn for navigate

--- a/src/components/accordion/Accordion.scss
+++ b/src/components/accordion/Accordion.scss
@@ -33,3 +33,7 @@ details[open] summary {
             content: url(../icons/IconMinus.svg);
         }
 }
+
+.accordion__section {
+    display: flex;
+}
