--- a/src/views/proyect/Proyect.scss
+++ b/src/views/proyect/Proyect.scss
@@ -4,11 +4,12 @@
 .proyect {
     display: flex;
     flex-direction: column;
+    gap: 3rem;
     padding: 2rem;
-    max-width: 80rem;
+    max-width: 90rem;
 
     &__img {
-        aspect-ratio: 4/3;
+        aspect-ratio: 4/2.5;
         background-color: var(--color-gray);
 
         & img {
@@ -21,21 +22,24 @@
     &__contents {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        flex: 1;
+    }
+
+    &__subtittle {
+        margin: 0;
     }
 
     &__buttons {
         display: flex;
         justify-content: center;
         gap: 3rem;
+        padding: 1rem 0;
     }
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 700px) {
     .proyect {
         flex-direction: row;
-        gap: 3rem;
-        padding: 0 calc((100% - 80rem) / 2);
 
         &__img {
             width: 40%;
@@ -44,5 +48,11 @@
         &__buttons {
             justify-content: start;
         }
+    }
+}
+
+@media all and (min-width: 900px) {
+    .proyect {
+        padding: 2rem calc((100% - 90rem) / 2);
     }
 }
