Refactor code to put the back btn bellow the firstsight section of all pages

--- a/src/views/design/Design.scss
+++ b/src/views/design/Design.scss
@@ -10,6 +10,7 @@
 
         &:hover {
             background-color: var(--color-gray_lighter);
+            border-color: var(--color-yellow_dark);
         }
     }
 }
