List issue solved and add padding to main tag in mobile and tablet screen size

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -96,3 +96,13 @@ main {
     top: 2rem;
     left: 2rem;
 }
+
+.main--margin {
+    padding-top: 3rem;
+}
+
+@media all and (min-width: 800px) {
+    .main--margin {
+        padding-top: 0;
+    }
+}
