--- a/src/scss/_lists.scss
+++ b/src/scss/_lists.scss
@@ -5,8 +5,9 @@
     
     &__item {
         display: flex;
-        gap: .5rem;
         margin-bottom: 1.5rem;
+        position: relative;
+        padding-left: 3rem;
 
         &:last-child {
             margin-bottom: 0;
@@ -16,6 +17,9 @@
             content: url(../components/icons/IconFeature.svg);
             width: 2rem;
             height: 2rem;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
     }
 }
