Add project images & retouch some effect

--- a/src/components/hexagon/Hexagon.scss
+++ b/src/components/hexagon/Hexagon.scss
@@ -1,7 +1,7 @@
 .hexagon {
     position: absolute;
     fill: none;
-    stroke: var(--color-yellow);
+    stroke: var(--color-cadet_blue_lighter);
     stroke-width: .5rem;
     top: 20%;
     animation: hexagonRotate 4s infinite;
