--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -54,7 +54,6 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 3rem;
-    position: relative;
 }
 
 .section {
@@ -96,9 +95,10 @@ main {
 }
 
 .btnFixed {
-    position: absolute;
+    position: fixed;
     top: 2rem;
     left: 2rem;
+    z-index: 2;
 }
 
 .main--margin {
