--- a/src/views/proyect/Proyect.scss
+++ b/src/views/proyect/Proyect.scss
@@ -9,7 +9,6 @@
     max-width: 90rem;
 
     &__img {
-        aspect-ratio: 4/2.5;
         background-color: var(--color-gray);
 
         & img {
@@ -40,9 +39,11 @@
 @media all and (min-width: 700px) {
     .proyect {
         flex-direction: row;
+        align-items: center;
 
         &__img {
             width: 40%;
+            height: 100%;
         }
 
         &__buttons {
