Add styleguide refactor

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -60,6 +60,7 @@ button,
         &:hover {
             border-color: var(--color-yellow_dark);
             background-color: transparent;
+            color: var(--color-yellow_dark);
         }
         
         &.linkAsBtn:hover {
