--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -31,6 +31,11 @@ select {
     &:focus {
         outline: .1em solid var(--color-yellow_dark);
     }
+
+    &::placeholder {
+        color: var(--color-gray);
+        line-height: 1.3em;
+    }
 }
 
 input + input {
